--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,5 @@ Maintainer: James Scott <james.scott15@imperial.ac.uk>
 Description: One paragraph description of what the package does as
        one or more full sentences.
 License: MIT
-Imports: methods, Rcpp (>= 0.12.14)
+Imports: methods, Rcpp (>= 0.12.14), Matrix
 LinkingTo: Rcpp, RcppArmadillo
